# Muzik

./: .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  rsw.toml  rush.json  tsconfig.json
.github/workflows/: release.yml
.gitlab/issue_templates/: issue.md
.rsw/: rsw.crates
.rsw/template/: Cargo.toml
apps/desktop/: .babelrc  .prettierrc  README.md  build-base.js  create-rpc.config.js  electron-builder.yml  forge.config.js  index.html  main.build.js  package-lock.json  package.json  renderer.build.js  rollup.config.js  tsconfig.json  webpack.config.js  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
apps/desktop2/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.mts  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts
apps/desktop2.old/: forge.config.js  index.html  package.json  vite.main.config.ts
apps/song-importer/: package.json
apps/standalone-importer/: nodemon.json  package.json
common/git-hooks/: pre-commit  pre-commit.broken
config/app-babel/: index.js  package.json
config/app-webpack/: index.js  package.json
config/babel/: index.js  package.json
config/bundler/: bin.mjs  package.json
native-libs/importer-native/: Cargo.toml  index.js  package.json
native-libs/importer-native/src/: lib.rs
native-libs/importer-native/src/avg_colour/: mod.rs
native-libs/importer-native/src/buffer_hash/: mod.rs
native-libs/importer-native/src/phash/: mod.rs
(+471 files in other folders)
