[package]
name = "importer-native"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
image = "0.24.7"
blockhash = "0.5.0"

[dependencies.xxhash-rust]
version = "0.8.7"
features = ["xxh3"]

[dependencies.getrandom]
features = ["js"]
